# naming-utils

./: LICENSE  README.md  README.rst  setup.cfg  setup.py
file_name_utils/: __init__.py
file_utils/: __init__.py
src/naming_utils/: __init__.py
tests/: test_file_utils.py  test_naming_utils.py
tests/naming_utils/: test_naming_utils.py
