[metadata]
name = naming-utils
url= https://github.com/maransowthri/naming-utils.git
author = Maran Sowthri Kalailingam
author_email = contact@maransowthri.dev
description = Simple utility for generating unique names with timestamps.
long_description = file: README.rst
license = MIT
project_urls =
    Source = https://github.com/maransowthri/naming-utils.git
keywords =
    naming, automation, log, files, utils